--- a/travel/css/adaptive.css
+++ b/travel/css/adaptive.css
@@ -10,8 +10,12 @@
         height: 32px;
         width: 35px;
         position: relative;
-        z-index: 5;
+        z-index: 30;
         cursor: pointer;
+        
+    }
+    .menu__icon.active #menu__icon__span{
+        transform: scale(0);
     }
     #menu__icon__span {
         position: absolute;
@@ -22,17 +26,29 @@
         height: 3px;
         background: #fff;
         border-radius: 13px;
+        transition: all .5s;
     }
+    .menu__icon.active #menu__icon__span:first-child {
+        transform: rotate(-45deg);
+        top: calc(50% - 1.5px);
+    }
+    .menu__icon.active #menu__icon__span:last-child {
+        transform: rotate(45deg);
+        bottom: calc(50% - 1.5px);
+    }
+
+
     #menu__icon__span:first-child {
         top: 25%;
     }
+
     #menu__icon__span:last-child {
         top: auto;
         bottom: 25%;
         height: 3.5px;
     }
     .header__menu-block {
-        position: relative;
+        
     }
     .header__menu {
         position: absolute;
@@ -41,9 +57,16 @@
         background: #F2785C;
         box-shadow: 0px 4px 3px rgba(13, 96, 111, 0.25);
         border-radius: 10px;
-        z-index: 5;
-        right: 100px;
-        display: none;
+        z-index: 12;
+        top: 0;
+        right: -100%;
+        /* display: none; */
+        transition: all .2s;
+    }
+
+    .header__menu.active {
+        right: 0%;
+        /* display: none; */
     }
     .havigation__list {
         flex-direction: column;
@@ -94,7 +117,35 @@
         font-size: 20px;    
         width: 100%;
         background-color: white;
+        height: 1475px;
     }
+
+    body.lock {
+        overflow: hidden;
+    }
+    .bg__container {
+        position: relative;
+        overflow: hidden;
+        height: 100%;
+        /* max-height: 1475px; */
+        z-index: 0;
+
+    }
+    .dark__bg {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #00000096;
+        width: 100%;
+        height: 100%;
+        z-index: 1;
+    }
+    .dark__bg.active {
+        display: block;
+    }
+
+
 
     
     button {
@@ -370,8 +421,6 @@
     .swiper-button-next:after,
     .swiper-button-prev:after {
         color: rgba(242, 120, 92, 0.5);
-        /* height: 30px !important; */
-        /* width: 30px !important; */
         font-size: 30px !important;
         font-weight: 700;
         top: 55%;
