--- a/travel/css/style.css
+++ b/travel/css/style.css
@@ -17,7 +17,9 @@ body {
     font-size: 20px;    
     width: 100%;
     background-color: white;
+    height: 3735px;
 }
+
 button {
     cursor: pointer;
     border: 0px;
@@ -50,7 +52,7 @@ button {
     position: absolute; /* позиционирование относительно .body (формально)*/
     top: 0px;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
 }
 .header__content {
     display: flex;
@@ -107,6 +109,9 @@ button {
 .header__login-button {
     padding-left: 60px;
 }
+.header__login-button:hover{
+    transform: scale(1.1);
+} 
 .button__login {
     display: flex;
     flex-direction: row;
@@ -190,10 +195,10 @@ button {
     /* -webkit-transition: -webkit-transform .5s ease-in-out;
     transition:         transform .5s ease-in-out; */
 }
-/*
+
 .button__preview-start:hover{
     transform: scale(1.1);
-} */
+} 
 .preview__input-text[type="search"] {
     font-family: 'Aleo';
     font-style: italic;
@@ -307,6 +312,9 @@ button {
     font-size: 24px;
     /* -webkit-transition: -webkit-transform .5s ease-in-out;
     transition:         transform .5s ease-in-out; */
+}
+.button__find-more:hover {
+    transform: scale(1.2);
 }
 .destinations__slayder {
     width: 100%;
@@ -497,9 +505,11 @@ button {
     font-weight: 500;
     font-size: 24px;
     margin: 0 auto;
-    /* -webkit-transition: -webkit-transform .5s ease-in-out;
-    transition:         transform .5s ease-in-out; */
 }
+.button__see-more:hover {
+    transform: scale(1.2);
+}
+
 
 
 
@@ -530,6 +540,39 @@ button {
     width: 141px;
 }
 
+
+.footer__middle-block:hover{
+    transform: scale(1.1);
+}
+.git-img:hover{
+    transform: scale(1.3);
+}
+.inst-img {
+    -webkit-transition: -webkit-transform .5s ease-in-out;
+            transition:         transform .5s ease-in-out;
+}
+.inst-img:hover{
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+.yt-img{
+    -webkit-transition: -webkit-transform 1s ease-in-out;
+            transition:         transform 1s ease-in-out;
+}
+.yt-img:hover{
+    transform: scale(1.1);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+}
+.tw-img{
+    -webkit-transition: -webkit-transform 1.5s ease-in-out;
+            transition:         transform 1.5s ease-in-out;
+}
+.tw-img:hover{
+
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+} 
 /* 
 .header_login {
     padding-top: 10px;
@@ -943,107 +986,7 @@ button {
 .see_more_button:hover{
     transform: scale(1.2);
 }
-.bg_st_picture {
-    height: 0px;
-    font-size: 0px;
-}
-picture {
-    height: 0px;
-    width: 0px;
-} */
-/*Stories end*/
-
-
-
-
-
-/* Footer start */
-/* .footer{
-    height: 61px;
-    width: 1201px;
-    margin-top: 40px;   
-}
-.my_links {
-    width: 150px;
-    height: 61px;
-}
-.my_links_{
-    width: 150px;
-    height: 61px;
-}
-.container_links{
-    width: 1201px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.github_pic{
-    height: 34px;
-}
-.rsschool_pic{
-    height: 33px;
-}
-.rights{
-    color: white;
-    font-family: 'Red Hat Text';
-    font-weight: 500;
-    font-size: 16px;
-    margin-top: 0px;
-}
-.items_footer_left{
-    list-style-type: none;
-    display: flex;
-    margin-right: 0px;
-    margin-top: 15px;
-    margin-bottom: 0px;
-}
-.items_footer_right{
-    list-style-type: none;
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 15px;
-    margin-bottom: 0px;
-}
-.left_pic{
-    margin-right: 20px;
-}
-.right_pic + .right_pic {
-    margin-left: 20px;
-}
-.rsschool_pic:hover{
-    transform: scale(1.1);
-}
-.github_pic:hover{
-    transform: scale(1.3);
-}
-.inst_pic{
-    -webkit-transition: -webkit-transform .5s ease-in-out;
-            transition:         transform .5s ease-in-out;
-}
-.inst_pic:hover{
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-}
-.yt_pic{
-    -webkit-transition: -webkit-transform 1s ease-in-out;
-            transition:         transform 1s ease-in-out;
-}
-.yt_pic:hover{
-    transform: scale(1.1);
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-}
-.tw_pic{
-    -webkit-transition: -webkit-transform 1.5s ease-in-out;
-            transition:         transform 1.5s ease-in-out;
-}
-.tw_pic:hover{
-
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-} */
-
-/* Footer start */
+*/
 
 
 
